// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert colors 1`] = `
<div
  className="sc-hKwDye bDPwjS"
>
  <div
    style={
      Object {
        "display": "flex",
        "zIndex": 100,
      }
    }
  >
    <div
      className="sc-gsDKAQ sc-dkPtRN ktNGwk hjGvrY"
      dir="left"
    >
      INSERT
    </div>
    <div
      className="sc-bdvvtL cXyHrn"
      color="#076678"
      dir="left"
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "zIndex": 99,
      }
    }
  >
    <div
      className="sc-gsDKAQ sc-dkPtRN ktNGwk drgQRY"
      dir="left"
    >
      some file
    </div>
    <div
      className="sc-bdvvtL dsnwVd"
      color="#d5c4a1"
      dir="left"
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "zIndex": 98,
      }
    }
  >
    <div
      className="sc-gsDKAQ sc-dkPtRN ktNGwk iXDobc"
      dir="left"
    >
      8?
    </div>
    <div
      className="sc-bdvvtL dsnwVd"
      color="#d5c4a1"
      dir="left"
    />
  </div>
  <div
    className="sc-eCImPb iaLjNI"
  >
    <div
      style={
        Object {
          "display": "flex",
          "zIndex": 100,
        }
      }
    >
      <div
        className="sc-bdvvtL efovQs"
        color="#076678"
        dir="right"
      />
      <div
        className="sc-gsDKAQ sc-dkPtRN ktNGwk edMYak"
        dir="right"
      >
        3% : 3/300
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "zIndex": 99,
        }
      }
    >
      <div
        className="sc-bdvvtL xxeWu"
        color="#d5c4a1"
        dir="right"
      />
      <div
        className="sc-gsDKAQ sc-dkPtRN ktNGwk hCHYao"
        dir="right"
      >
        hah
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "zIndex": 98,
        }
      }
    >
      <div
        className="sc-bdvvtL xxeWu"
        color="#d5c4a1"
        dir="right"
      />
      <div
        className="sc-gsDKAQ sc-dkPtRN ktNGwk fkdtWg"
        dir="right"
      >
        hheh
      </div>
    </div>
  </div>
</div>
`;

exports[`normal colors 1`] = `
<div
  className="sc-hKwDye hlksiN"
>
  <div
    style={
      Object {
        "display": "flex",
        "zIndex": 100,
      }
    }
  >
    <div
      className="sc-gsDKAQ sc-dkPtRN ktNGwk cSLGga"
      dir="left"
    >
      NORMAL
    </div>
    <div
      className="sc-bdvvtL bYKFuF"
      color="#7c6f64"
      dir="left"
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "zIndex": 99,
      }
    }
  >
    <div
      className="sc-gsDKAQ sc-dkPtRN ktNGwk iXDobc"
      dir="left"
    >
      hm
    </div>
    <div
      className="sc-bdvvtL dsnwVd"
      color="#d5c4a1"
      dir="left"
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "zIndex": 98,
      }
    }
  >
    <div
      className="sc-gsDKAQ sc-dkPtRN ktNGwk cviyfT"
      dir="left"
    >
      3
    </div>
    <div
      className="sc-bdvvtL eCTkIa"
      color="#ebdbb2"
      dir="left"
    />
  </div>
  <div
    className="sc-eCImPb iaLjNI"
  >
    <div
      style={
        Object {
          "display": "flex",
          "zIndex": 100,
        }
      }
    >
      <div
        className="sc-bdvvtL jMyhKK"
        color="#7c6f64"
        dir="right"
      />
      <div
        className="sc-gsDKAQ sc-dkPtRN ktNGwk gNWHXG"
        dir="right"
      >
        3% : 3/300
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "zIndex": 99,
        }
      }
    >
      <div
        className="sc-bdvvtL xxeWu"
        color="#d5c4a1"
        dir="right"
      />
      <div
        className="sc-gsDKAQ sc-dkPtRN ktNGwk fkdtWg"
        dir="right"
      >
        ae
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "zIndex": 98,
        }
      }
    >
      <div
        className="sc-bdvvtL gICKSd"
        color="#ebdbb2"
        dir="right"
      />
      <div
        className="sc-gsDKAQ sc-dkPtRN ktNGwk dPiJWH"
        dir="right"
      >
        r
      </div>
    </div>
  </div>
</div>
`;

exports[`rendered colors 1`] = `
<div
  className="sc-hKwDye bDPwjS"
>
  <div
    style={
      Object {
        "display": "flex",
        "zIndex": 100,
      }
    }
  >
    <div
      className="sc-gsDKAQ sc-dkPtRN ktNGwk cpVntN"
      dir="left"
    >
      RENDERED
    </div>
    <div
      className="sc-bdvvtL ddHHXW"
      color="#8f3f71"
      dir="left"
    />
  </div>
  <div
    className="sc-eCImPb iaLjNI"
  >
    <div
      style={
        Object {
          "display": "flex",
          "zIndex": 100,
        }
      }
    >
      <div
        className="sc-bdvvtL IdxZ"
        color="#8f3f71"
        dir="right"
      />
      <div
        className="sc-gsDKAQ sc-dkPtRN ktNGwk ibfvOF"
        dir="right"
      >
        3% : 3/300
      </div>
    </div>
  </div>
</div>
`;

exports[`visual colors 1`] = `
<div
  className="sc-hKwDye loAIBN"
>
  <div
    style={
      Object {
        "display": "flex",
        "zIndex": 100,
      }
    }
  >
    <div
      className="sc-gsDKAQ sc-dkPtRN ktNGwk iBcGEW"
      dir="left"
    >
      V_BLOCK
    </div>
    <div
      className="sc-bdvvtL lmFPxZ"
      color="#af3a03"
      dir="left"
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "zIndex": 99,
      }
    }
  >
    <div
      className="sc-gsDKAQ sc-dkPtRN ktNGwk iXDobc"
      dir="left"
    >
      owo
    </div>
    <div
      className="sc-bdvvtL dsnwVd"
      color="#d5c4a1"
      dir="left"
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "zIndex": 98,
      }
    }
  >
    <div
      className="sc-gsDKAQ sc-dkPtRN ktNGwk eSLkxa"
      dir="left"
    >
      3
    </div>
    <div
      className="sc-bdvvtL jvswJW"
      color="#a89984"
      dir="left"
    />
  </div>
  <div
    className="sc-eCImPb iaLjNI"
  >
    <div
      style={
        Object {
          "display": "flex",
          "zIndex": 100,
        }
      }
    >
      <div
        className="sc-bdvvtL fVvAoC"
        color="#af3a03"
        dir="right"
      />
      <div
        className="sc-gsDKAQ sc-dkPtRN ktNGwk gCEJlO"
        dir="right"
      >
        3% : 3/300
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "zIndex": 99,
        }
      }
    >
      <div
        className="sc-bdvvtL xxeWu"
        color="#d5c4a1"
        dir="right"
      />
      <div
        className="sc-gsDKAQ sc-dkPtRN ktNGwk fkdtWg"
        dir="right"
      >
        ae
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "zIndex": 98,
        }
      }
    >
      <div
        className="sc-bdvvtL gTyiTZ"
        color="#a89984"
        dir="right"
      />
      <div
        className="sc-gsDKAQ sc-dkPtRN ktNGwk einxge"
        dir="right"
      >
        r
      </div>
    </div>
  </div>
</div>
`;
